syntax = "proto3";

package verify;

option go_package = "gen/";

service UpdateChecker {
    rpc CheckUpdate(CheckUdateRequest) returns (stream CheckUdateResponce);
}

message CheckUdateRequest {
    string server_uuid = 1;
}

message CheckUdateResponce {
    string title = 1;
    string description = 2;
}